# paraulins

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  IMAGE_SEARCH_SETUP.md  Makefile  README.md  app.py  config.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
models/: child.py  recording.py  word.py
routes/: api.py  web.py
services/: audio_service.py  data_service.py  image_search_service.py  image_service.py
static/css/: style.css
static/js/: main.js
templates/: child.html  error.html  index.html
tests/: conftest.py  test_models.py  test_routes.py  test_services.py
