[project]
name = "voices"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Family Voices", email = "family@voices.com"},
    {name = "Alejandro Colomina", email = "alejandro.colomina@gmail.com"},
]
dependencies = [
    "Flask>=2.3.3",
    "Flask-CORS>=4.0.0",
    "Pillow>=10.0.1",
    "python-dotenv>=1.0.0",
    "Werkzeug>=2.3.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-flask>=1.3.0",
]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "mypy>=1.16.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python app.py"
test = "pytest"
test-cov = "pytest --cov=. --cov-report=html --cov-report=term"
lint = "flake8 ."
format = "black ."
type-check = "mypy ."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
